--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -175,6 +175,7 @@ parameter distribution.
 \include{methods}
 \include{results}
 \include{resultsB}
+\include{discussion}
 \include{conclusion}
 
 \bibliographystyle{ieeetr}
