more thesis gah

--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -1,4 +1,4 @@
-\chapter{Methods of Analyzing FMRI}
+\chapter{Alternative Techniques}
 \label{sec:Prior Works}
 Currently, FMRI is used to determine the location of responses
 to stimuli. The method of finding activation is discussed in 
