--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -1,11 +1,25 @@
 \chapter{Conclusion}
 \label{sec:Conclusion}
-This work has proposed and demonstrated the use of a particle filter
-for the estimation of BOLD model parameters. Because many of the parameters
-were under constrained from the point of view of the BOLD response, a
-full posterior estimate was a more logical approach to parameter estimation
-than a single point estimate of the parameters. The particle filter also converged
-quickly to correct output estimates, and thus provides a framework
-for future real-time FMRI experiments. Final BOLD estimates were also comparable
-to the results of SPM. 
+This work has demonstrated the use of the particle filter to
+learn parameters of the BOLD model. Since the inception of the
+BOLD equations, many attempts have been made to learn the parameters,
+given FMRI data. These attempts have typically either been extremely 
+slow or made extensive approximations. While the particle filter method
+is not quick, 60 seconds to analyze each voxel is well within the capabilities
+of the typical research lab. 
+
+One significant finding of this work, that would not be clear without 
+calculating a full posterior distribution, is the interplay 
+between the parameters. The results of simulations clearly demonstrate
+that identifying a single set of parameters is not possible with this 
+model. Although sensitivity tests in \cite{Deneux2006} certainly hinted
+at this, the current work clearly demonstrates this fact. Therefore,
+any single estimate of parameters is insufficient for analysis. As such,
+approaches to the BOLD model that do not treat the parameters as distributions
+will not be able to overcome the inherent indeterminability of the
+parameters. Besides the Unscented Kalman Filter, this is the only approach
+that accomplishes this task without recalculating the parameters over and 
+over to build a distribution. The Unscented Kalman Filter, though, is limited
+to Gaussian estimation. 
+
 
