--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -44,8 +44,17 @@ the distributions that turn the approach into classical statistics.
 This approach is a true Bayesian non-parametric approach that given
 enough measurements will approach the true probability distribution
 of the parameters. While the conclusion that the parameters are not
-uniquely identifiable is a disappointing in light years of research 
+uniquely identifiable is a disappointing one in light years of research 
 attempting to learn these parameters, it in fact further demonstrates
 the need to estimate probability distribution rather than a single 
-parameter estimate.
+parameter estimate. At the same time, the output of the particle filter
+is still about to give good estimates of the BOLD output, and not
+dependent on heavy Gaussian smoothing. Therefore, all the current 
+experimental paradigms to determine regional activity are still viable.
+To borrow a computer term, the particle filter algorithm is backward 
+compatible with the current methods. 
 
+Concluding, the particle filter provides comparable performance with
+conventional tests, but also provides a platform for a wide range of
+future uses beyond what is possible with the methods applied in the
+past.
