--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -64,7 +64,7 @@
 
 % TITLE
 {\Large 
-Full Volume Blood-Oxygen-Level-Dependent-Signal Parameter Estimation Using Particle Filters
+Full Brain Blood-Oxygen-Level-Dependent Signal Parameter Estimation Using Particle Filters
 }
 
 \vfill
